fix: remove helper files, add allowed hosts for dev and fix layout bugs

--- a/src/globals.css
+++ b/src/globals.css
@@ -30,5 +30,5 @@ body {
 }
 
 .main-layout {
-  @apply flex flex-col items-center;
+  @apply flex flex-col items-center pt-20;
 }
